src/test/ui/rfc-2632-const-trait-impl/const-check-fns-in-const-impl.stderr
error[E0723]: can only call other `const fn` within a `const fn`, but `non_const` is not stable as `const fn`
  --> $DIR/const-check-fns-in-const-impl.rs:12:16
   |
LL |     fn foo() { non_const() }
   |                ^^^^^^^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0723`.
